--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
 </head>
 <body>
     <form action="\">
-        <input type="password" name="passwordName" id="passwordId" class="passwordClass">
+        <input type="text" name="passwordName" id="passwordId" class="passwordClass">
     </form>
-    <script src="/index.js">
+    <script src="/vfyjs.browser.js"></script>
+    <script>
         const input = document.querySelector('input')
-        const vfyjs = isPassword(input.value)
-        console.log('= >',vfyjs);
+        input.addEventListener('input',()=>{
+            const value = input.value
+            const a = value
+            console.log('input',input.name);
+            // console.log('input.value',input.value);
+            try {
+                vfyjs.isPassword(input.value)
+            } catch (error) {
+                // console.log('error= >',error);
+                console.log('error.property =>',error.property);
+                console.log('error.message =>',error.message);
+                console.log('error.arrayError =>',error.arrayError);
+                console.log('error.input =>',error.input);
+            }
+        })
     </script>
 </body>
 </html>
