Revise password validation function to accept options. and better custom error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         const input = document.querySelector('input')
         input.addEventListener('input',()=>{
-            const value = input.value
+            const value = input
             const a = value
             console.log('input',input.name);
             // console.log('input.value',input.value);
