--- a/index.html
+++ b/index.html
@@ -9,24 +9,7 @@
     <form action="\">
         <input type="text" name="passwordName" id="passwordId" class="passwordClass">
     </form>
-    <script src="/vfyjs.browser.js"></script>
-    <script>
-        const input = document.querySelector('input')
-        input.addEventListener('input',()=>{
-            const value = input
-            const a = value
-            console.log('input',input.name);
-            // console.log('input.value',input.value);
-            try {
-                vfyjs.isPassword(input.value)
-            } catch (error) {
-                // console.log('error= >',error);
-                console.log('error.property =>',error.property);
-                console.log('error.message =>',error.message);
-                console.log('error.arrayError =>',error.arrayError);
-                console.log('error.input =>',error.input);
-            }
-        })
-    </script>
+    <script src="./vfyjs.browser.js"></script>
+    <script src="./tesss.js"></script>
 </body>
 </html>
